# PiFinder_Stellarmate

./: .gitignore  CHANGELOG.md  MyPiFinderDir  PiFinder Setup.desktop  PiFinder_Stellarmate.code-workspace  README.md  README_de.md  Readme_ControlCenter.md  Readme_ControlCenter_de.md  Readme_KeyboardBridge.md  Readme_KeyboardBridge_de.md  Readme_PFinder_LX200.md  Readme_PiFinder_LX200.md  Readme_PiFinder_LX200_de.md  Readme_design_decisions.md  Readme_design_decisions_de.md  ctx.md  gps_gpsd.py  indi_driver_compile.md  pifinder_post_update.sh  pifinder_stellarmate_setup.sh  session.md  session_advanced.md
.gemini/tmp/: main.py  status.py
.gemini/tmp/gps_files/: main.py  status.py
.gemini/tmp/ui_files/: status.py
altered_src_pifinder/: pifinder_post_update.sh  pifinder_setup.sh  pifinder_update.sh
altered_src_pifinder/pi_config_files/: pifinder.service
altered_src_pifinder/python/: requirements.txt
altered_src_pifinder/python/PiFinder/: gps_gpsd.py
diffs/: api_extensions_py.diff  apply_patches.md  base_html.diff  camera_interface_py.diff  camera_pi_py.diff  catalogs_py.diff  drm_preview_smos.diff  gps_menu.diff  header_tpl.diff  index_html.diff  index_tpl.diff  keplerlib_batch_propagate_smos.diff  keyboard_pi_smos.diff  main_py.diff  menu_structure_py.diff  pos_server.py  server_py.diff  starlib_numpy2_smos.diff  state_py.diff  status_py.diff  sys_utils_fake_py.diff  sys_utils_py.diff
docs/: upstream_patch_inventory.md  upstream_pr_templates.md
docs/concepts/: mount_bridge_web_integration.md
docs/draft/: stock_debian_pifinder_mount_howto.md
docs/images/pfinder_lx200/: README.md
gui_installer/: indi_client.py  launch_setup_gui.sh  pam_auth.py  server.py  status_page.html
indi/: README_indi.md
indi_pifinder/: CMakeLists.txt  CMakeLists.txt.in_tree  indi_pifinder_lx200_driver.xml.in  lx200_pifinder.cpp  lx200_pifinder.h  lx200generic.cpp  pifinder.cpp  pifinder.h  pifinder_lx200.cpp  pifinder_lx200.cpp.new  pifinder_lx200.h  pifinder_lx200.h.new
indi_pifinder_bridge/: CMakeLists.txt  indi_pifinder_mount_bridge_driver.xml.in  pifinder_bridge_client.cpp  pifinder_bridge_client.h  pifinder_mount_bridge.cpp  pifinder_mount_bridge.h
pi_config_files/: pifinder-control-center.service  pifinder-fake-mode-autostart.service  pifinder-numpad-bridge.service  pifinder-setup.service  pifinder.service  pifinder_kstars_location_writer.service  pifinder_splash.service
python/PiFinder/: camera_pi.py  main.py  solver.py
python/PiFinder/tetra3/: __init__.py
session/: ctx.md  session.md  session_advanced.md
src_pifinder/: .gitignore  default_config.json  pifinder_post_update.sh  pifinder_post_update.sh.before.stellarmate  pifinder_setup.sh  pifinder_setup.sh.before.stellarmate
src_pifinder/.claude/skills/pifinder-remote/: SKILL.md
src_pifinder/.claude/skills/pifinder-remote/scripts/: pf_remote.py
src_pifinder/astro_data/: comets.txt
src_pifinder/pi_config_files/: pifinder.service  pifinder_kstars_location_writer.service  pifinder_splash.service
src_pifinder/python/: gps_stellarmate.py  requirements.txt
src_pifinder/python/PiFinder/: gps_gpsd.py  gps_stellarmate.py  main.py  solver.py
src_pifinder/python/PiFinder/tetra3/tetra3/: __init__.py
src_pifinder/python/PiFinder/ui/: menu_structure.py
src_pifinder/python/views/: first_steps.html  smos.html
test_tools/: fake_mode.sh  fake_pifinder_lx200.py  fb_keyboard_bridge.py  fb_screen_mirror.py  keypad_gpio_matrix_test.py  test.md
tmp/: indi_eqmod.xml  indi_pifinder_lx200_driver.xml  log_12-13-15.txt  pifinder_lx200.h.bak  pos_server.py
ui/: marking_menus.py
